proxy/auth => feat: auth app infrastructure
